--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "less": "^4.1.2",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.4.0",
+    "rollup": "^2.78.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
