--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^7.17.0",
     "less": "^4.1.2",
-    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "prettier": "^2.4.0",
     "rollup": "^2.78.1",
     "rollup-plugin-visualizer": "^5.6.0",
