--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
     "dev": "vite --host 0.0.0.0 --mode development",
     "build": "vite build --mode production"
   },
@@ -28,24 +29,47 @@
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "@vitejs/plugin-vue": "^1.6.1",
+    "mockjs": "^1.1.0",
+    "vite-plugin-mock": "^2.9.6",
+    "@types/node": "^17.0.42",
+    "@typescript-eslint/eslint-plugin": "^5.36.0",
+    "@typescript-eslint/parser": "^5.36.0",
+    "@vitejs/plugin-vue": "^3.1.0",
     "@vue/compiler-sfc": "^3.2.6",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^7.17.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.0",
+    "eslint-plugin-vue": "^9.4.0",
     "less": "^4.1.2",
+    "lint-staged": "^13.0.3",
+    "picocolors": "^1.0.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "prettier": "^2.4.0",
     "rollup": "^2.78.1",
     "rollup-plugin-visualizer": "^5.6.0",
+    "simple-git-hooks": "^2.8.0",
     "typescript": "^4.3.2",
-    "vite": "^2.5.4",
-    "vue-tsc": "^0.2.2",
-    "mockjs": "^1.1.0",
-    "vite-plugin-mock": "^2.9.6"
+    "vite": "^3.0.0",
+    "vue-tsc": "^0.40.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged --concurrent false",
+    "commit-msg": "pnpm exec tsx scripts/verifyCommit.ts $1"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --write --cache --ignore-unknown"
+    ],
+    "src/**/*.d.ts": [
+      "eslint --cache --fix"
+    ],
+    "src/**/*.ts": [
+      "eslint --cache --fix"
+    ],
+    "src/**/*.vue": [
+      "eslint --cache --fix"
+    ]
   }
 }
