--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "axios": "^0.26.0",
     "element-plus": "^2.2.5",
-    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
@@ -50,6 +49,7 @@
     "rollup": "^2.78.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "simple-git-hooks": "^2.8.0",
+    "tsx": "^3.9.0",
     "typescript": "^4.3.2",
     "vite": "^3.0.0",
     "vue-tsc": "^0.40.0"
