--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "dayjs": "^1.11.5",
     "element-plus": "^2.2.5",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
-    "mockjs": "^1.1.0",
-    "vite-plugin-mock": "^2.9.6",
     "@types/node": "^17.0.42",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.36.0",
     "@typescript-eslint/parser": "^5.36.0",
     "@vitejs/plugin-vue": "^3.1.0",
@@ -43,6 +42,7 @@
     "eslint-plugin-vue": "^9.4.0",
     "less": "^4.1.2",
     "lint-staged": "^13.0.3",
+    "mockjs": "^1.1.0",
     "picocolors": "^1.0.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "prettier": "^2.4.0",
@@ -52,6 +52,7 @@
     "tsx": "^3.9.0",
     "typescript": "^4.3.2",
     "vite": "^3.0.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.40.0"
   },
   "simple-git-hooks": {
