--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template-vue3.2-project",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "vue3.2-project template",
   "keywords": [
     "frontend"
@@ -16,8 +16,9 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "dev": "vite --host 0.0.0.0 --mode development",
-    "build": "vite build --mode production"
+    "dev": "vite",
+    "build": "vite build --mode production",
+    "release": "tsx scripts/release.ts"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -28,26 +29,37 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^17.0.42",
     "@types/nprogress": "^0.2.0",
+    "@types/prompts": "^2.4.1",
+    "@types/semver": "^7.3.13",
     "@typescript-eslint/eslint-plugin": "^5.36.0",
     "@typescript-eslint/parser": "^5.36.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.0",
     "eslint-plugin-vue": "^9.4.0",
+    "execa": "^6.1.0",
+    "fs-extra": "^10.1.0",
     "less": "^4.1.2",
     "lint-staged": "^13.0.3",
+    "minimist": "^1.2.7",
     "mockjs": "^1.1.0",
     "picocolors": "^1.0.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.5",
     "prettier": "^2.4.0",
+    "prompts": "^2.4.2",
     "rollup": "^2.78.1",
     "rollup-plugin-visualizer": "^5.6.0",
+    "semver": "^7.3.8",
     "simple-git-hooks": "^2.8.0",
     "tsx": "^3.9.0",
     "typescript": "^4.3.2",
